[gd_scene load_steps=7 format=2]

[ext_resource path="res://Mailbox Puzzle/Sprites/Mailbox.png" type="Texture" id=1]
[ext_resource path="res://Mailbox Puzzle/Sprites/Normal Mail.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Mailbox.gd" type="Script" id=3]
[ext_resource path="res://Mailbox Puzzle/Sprites/Target Mail.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 20 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Mails",
"speed": 5.0
} ]

[node name="Mailbox" type="Area2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -16 )

[node name="Mail1" type="AnimatedSprite" parent="Node2D"]
position = Vector2( -9, -1 )
frames = SubResource( 2 )
animation = "Mails"

[node name="Mail3" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 0, -11 )
frames = SubResource( 2 )
animation = "Mails"

[node name="Mail2" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 9, -1 )
frames = SubResource( 2 )
animation = "Mails"
flip_h = true

[connection signal="body_entered" from="." to="." method="_on_Mailbox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Mailbox_body_exited"]
